[gd_scene load_steps=10 format=3 uid="uid://be8mxi8kg7i7a"]

[ext_resource type="Script" path="res://menus/pause_menu/pause_menu.gd" id="1_q1itc"]
[ext_resource type="Shader" path="res://menus/pause_menu/pause_menu.gdshader" id="2_6bkc2"]
[ext_resource type="PackedScene" uid="uid://dj73qnlo2iytx" path="res://menus/pause_menu/extras_menu.tscn" id="3_s1wnx"]
[ext_resource type="PackedScene" path="res://menus/pause_menu/DataReferences.tscn" id="4_k7a4i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fi7wq"]
shader = ExtResource("2_6bkc2")
shader_parameter/lod = 0.0

[sub_resource type="SystemFont" id="SystemFont_mrx3x"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="Animation" id="Animation_pdeom"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rird0"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qp0so"]
_data = {
"RESET": SubResource("Animation_pdeom"),
"blur": SubResource("Animation_rird0")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q1itc")

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 2
material = SubResource("ShaderMaterial_fi7wq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
process_mode = 2
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -232.0
offset_right = 262.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
process_mode = 2
layout_mode = 2
size_flags_vertical = 4

[node name="PauseMenuLabel" type="Label" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_mrx3x")
theme_override_font_sizes/font_size = 64
text = "Pause Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
process_mode = 2
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 38

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_mrx3x")
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
process_mode = 2
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 38

[node name="Extras" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_mrx3x")
theme_override_font_sizes/font_size = 48
text = "Extras"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
process_mode = 2
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 38

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_mrx3x")
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/VBoxContainer"]
process_mode = 2
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 38

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_mrx3x")
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 2
libraries = {
"": SubResource("AnimationLibrary_qp0so")
}

[node name="ExtrasMenu" parent="." instance=ExtResource("3_s1wnx")]
visible = false
layout_mode = 1

[node name="DataReferences" parent="ExtrasMenu" instance=ExtResource("4_k7a4i")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
